--- a/packages/storybook-html/src/components/hero/hero.html
+++ b/packages/storybook-html/src/components/hero/hero.html
@@ -3,7 +3,7 @@
 <div class="uq-hero">  
   <div class="uq-hero__content">
     <div class="uq-hero__text">
-      <h1>Page title</h1>
+      <h1 class="uq-hero__title">Page title</h1>
     </div>
   </div>
 </div>
@@ -12,7 +12,7 @@
 <div class="uq-hero">  
   <div class="uq-hero__content">
     <div class="uq-hero__text">
-          <h1>Parturient facilisi erat parturient vestibulum laoreet quam condimentum nullam</h1>
+          <h1 class="uq-hero__title">Parturient facilisi erat parturient vestibulum laoreet quam condimentum nullam</h1>
     </div>
   </div>
 </div>
@@ -29,7 +29,7 @@
   </div>
   <div class="uq-hero__content">
     <div class="uq-hero__text">
-      <h1>Start postgraduate study online</h1>
+      <h1 class="uq-hero__title">Start postgraduate study online</h1>
       <p class="uq-hero__subtext">Apply by June 30</p>
       <p><a class="uq-button" href="#">Learn more</a></p>
     </div>
@@ -47,7 +47,7 @@
   </div>
   <div class="uq-hero__content">
     <div class="uq-hero__text">
-      <h1>Start postgraduate study online</h1>
+      <h1 class="uq-hero__title">Start postgraduate study online</h1>
       <p class="uq-hero__subtext">Apply by June 30</p>
       <p><a class="uq-button" href="#">Learn more</a></p>
     </div>
