--- a/packages/storybook-html/src/components/breadcrumb/breadcrumb.html
+++ b/packages/storybook-html/src/components/breadcrumb/breadcrumb.html
@@ -9,7 +9,7 @@
       <meta itemprop="position" content="2">
     </li>
     <li class="uq-breadcrumb__item" itemprop="itemListElement" itemscope="" itemtype="https://schema.org/ListItem">
-      <a class="uq-breadcrumb__link" itemprop="item" href="/information-and-services/human-resources">Human resources</a>
+      <a class="uq-breadcrumb__link" itemprop="item" href="/information-and-services/internet-and-wifi">Internet and wifi</a>
       <meta itemprop="position" content="3">
     </li>
   </ol>
