--- a/packages/accordion/src/scss/_component.scss
+++ b/packages/accordion/src/scss/_component.scss
@@ -99,6 +99,18 @@
       }
     }
   }
+  &__subtitle {
+    font-size: core.$font-size-s;
+    font-weight: 400;
+    color: #6f6f6f;
+    line-height: 1.4;
+  
+    // required to Truncate text and add ellipsis
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;  
+    overflow: hidden;
+  }
 
   // Accordion content
   &__content {
@@ -136,6 +148,31 @@
   .contextual-links-wrapper {
     top: 0 !important;
   }
+
+  // Compact Modifier, reduces size for use in mixed components.
+  &--compact {
+
+    & .uq-accordion__toggle {
+      font-size: core.$font-size;
+      padding: core.$space-s core.$space-xxxl core.$space-s core.$space;
+    }
+
+    & .uq-accordion__toggle::before {
+      width: core.$space;
+      height: core.$space;
+      top: core.$space-xs;
+      right: core.$space;
+    }
+
+    & .uq-accordion__toggle--active::before {
+      width: core.$space;
+      height: core.$space;
+      top: core.$space-xs;
+      right: core.$space;
+    }
+
+  }
+
 }
 
 // Overrides for when displayed within wysiwyg fields.
@@ -145,27 +182,3 @@
     display: block !important;
   }
 }
-
-
-
-.uq-accordion--compact {
-   
-}
-.uq-accordion--compact .uq-accordion__toggle {
-  font-size: core.$font-size;
-  padding: core.$space-s core.$space-xxxl core.$space-s core.$space;
-}
-
-.uq-accordion__subtitle {
-  font-size: core.$font-size-s;
-  font-weight: 400;
-  color: #6f6f6f;
-  line-height: 1.4;
-
-// required for ellipsis and line value that will truncate text
-  display: -webkit-box;
-  -webkit-line-clamp: 3;
-  -webkit-box-orient: vertical;  
-  overflow: hidden;
-}
-
