Updated alerts and added exclamation-circle icon

--- a/packages/alert/src/scss/_component.scss
+++ b/packages/alert/src/scss/_component.scss
@@ -103,7 +103,7 @@
 
     .uq-alert__message {
       &::before {
-        background-image: url(icon.get-icon('standard--alert-triangle', core.$uq-neutral-dark80));
+        background-image: url(icon.get-icon('standard--exclamation-circle', core.$uq-neutral-dark80));
       }
     }
   }
@@ -112,7 +112,7 @@
 
     .uq-alert__message {
       &::before {
-        background-image: url(icon.get-icon('standard--error-circle', core.$uq-neutral-dark80));
+        background-image: url(icon.get-icon('standard--alert-triangle', core.$uq-neutral-dark80));
       }
     }
   }
@@ -196,7 +196,7 @@
   
       .uq-alert__message {
         &::before {
-          background-image: url(icon.get-icon('standard--error-circle', core.$uq-white));
+          background-image: url(icon.get-icon('standard--alert-triangle', core.$uq-white));
         }
       }
     }
