--- a/packages/form/src/scss/_global.scss
+++ b/packages/form/src/scss/_global.scss
@@ -23,5 +23,5 @@ $form-select-icon-disabled: $form-border-color;
 $form-checkbox-border-radius: 4px;
 $form-checkbox-border-width: 1px;
 $form-checkbox-check-color: core.$uq-white;
-$form-checkbox-size: 18px;
-$form-checkbox-check-size: $form-checkbox-size;
+$form-checkbox-size: 20px;
+$form-checkbox-check-size: 16px;
