--- a/packages/form/src/scss/_global.scss
+++ b/packages/form/src/scss/_global.scss
@@ -13,6 +13,7 @@ $form-label-size: core.$font-size-s;
 $form-placeholder-color: core.$uq-neutral-dark40;
 $form-spacing: core.$space;
 $form-text-color: core.$text;
+$form-text-disabled-color: core.$uq-neutral-dark20;
 $form-text-size: core.$font-size;
 
 // Select
