--- a/packages/private-design-output/src/scss/main.scss
+++ b/packages/private-design-output/src/scss/main.scss
@@ -9,7 +9,7 @@
 @use 'breadcrumb/src/scss/component' as breadcrumb;
 @use 'button/src/scss/component' as button;
 @use 'card/src/scss/component' as card;
-@use 'footer/src/scss/component' as footer;
+@use 'new-footer/src/scss/component' as new-footer;
 @use 'form/src/scss/component' as form;
 @use 'grid-menu/src/scss/component' as grid-menu;
 @use 'header/src/scss/component' as header;
