--- a/packages/new-footer/src/scss/_component.scss
+++ b/packages/new-footer/src/scss/_component.scss
@@ -2,171 +2,226 @@
 @use '@uqds/grid/src/scss/global' as grid;
 @use 'global' as *;
 
-.new-uq-footer {
-    background: core.$uq-purple-gradient;
-    box-sizing: border-box;
-    color: $site-footer-color;
-    font-family: core.$font-body;
-    font-size: $site-footer-font-size;
-    font-weight: core.$font-weight-thin;
-    line-height: core.$line-height;
-    
-    *, *::before, *::after {
-        box-sizing: border-box;
+.new-footer{
+    background:linear-gradient(90deg, #51247A 0%, 87%, #962A8B 100%);
+    box-sizing:border-box;
+    color:#d4c8de;
+  }  
+  
+  .new-footer__reconciliation {
+    background:#000;
+    background-image: linear-gradient(90deg, rgba(0, 0, 0, .8), rgba(0, 0, 0, .8)), url("../images/rap-artwork.png");
+    /*background-repeat: no-repeat;*/
+  }
+  .new-footer__acknowledgement {
+    max-width:650px;
+    padding: 2.5rem;
+    color: #d4c8de;
+    font-family: "Merriweather",Georgia,serif;
+    font-style: italic;
+    font-weight: 400;
+    font-size: 1.25rem;
+    line-height: 1.5;
+  }
+
+  .new-footer__link {
+    font-family: "Roboto","Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-style: normal;
+    font-weight: 500;
+    color:#fff;
+  }
+  .new-footer__link:hover {
+    text-decoration:underline;
+    color:#fff;
+  }
+  .new-footer__navigation {
+    border-bottom: 1px solid #d4c8de;
+  }
+
+  .new-footer__navigation-list {
+    display: block;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+  }
+  .new-footer__navigation-level-1 {
+
+  }
+  .new-footer__navigation-level-2 {
+
+  }
+  .new-footer__navigation-item {
+    border-top: 1px solid #d4c8de;
+    background-color: transparent;
+    display: block;
+    margin: 0;
+    padding: 0;
+    position: relative;  
+  }
+  .new-footer__navigation-level-2 .new-footer__navigation-item {
+    background-color: #f7f6f5;
+  }
+  .new-footer__navigation-level-2 .new-footer__navigation-link {
+    color: #2b2a29;
+  }
+  .new-footer__navigation-level-2 .new-footer__navigation-link:hover {
+    color: #2b2a29;
+  }
+  .new-footer__navigation-link {
+    display: block;
+    padding: 1rem 2.5rem;
+    color: #FFFFFF;
+  }
+  .new-footer__navigation-link:hover {
+    color: #ffffff;
+    text-decoration: underline;
+  }
+  .new-footer__navigation-toggle::after {
+    content: "";
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23ffffff'%3e%3cpath d='m14.285 5.145-6 6.167a.41.41 0 0 1-.598 0L1.715 5.145' fill='none' stroke='%23ffffff' stroke-width='.75' stroke-linecap='round' stroke-linejoin='round'%3e%3c/path%3e%3c/svg%3e");
+    background-repeat: no-repeat;
+    width: 1rem;
+    height: 1rem;
+    transform: translateY(50%);
+    position: absolute;
+    top: 0.688rem;
+    right: 2.5rem;
+  }
+  .new-footer__navigation--is-open::after {
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23ffffff'%3e%3cpath d='m1.715 10.855 6-6.168a.41.41 0 0 1 .597 0l5.973 6.168' fill='none' stroke='%23ffffff' stroke-width='.75' stroke-linecap='round' stroke-linejoin='round'%3e%3c/path%3e%3c/svg%3e");
+  }
+  @media(min-width: 64.25rem) {
+    .new-footer__navigation {
+      padding: 2.5rem 0;
     }
-
-    a {
-        color: $site-footer-link-color;
-        font-weight: 500;
-        text-decoration: none;
-
-        &:hover {
-            text-decoration: underline;
-        }
+    .new-footer__navigation-level-1 {
+      border: none;
+      display: grid;
+      grid-template-columns: repeat(3, minmax(0, 1fr));
+      grid-gap: 1rem;
     }
-
-    abbr[title] {
-        text-decoration: none;
-        border-bottom: 1px dotted;
+  }
+  @media(min-width: 73.25rem) {
+    .new-footer__navigation {
+      padding: 2.5rem 0;
     }
-
-    &__acknowledgement {
-        border-bottom: 1px solid rgba(core.$uq-white, 0.3);
-        color: $site-footer-color;
-        font-family: core.$merriweather;
-        font-size: core.$font-size;
-        font-style: italic;
-        font-weight: core.$font-weight-normal;
-        line-height: core.$line-height;
-        margin: core.$space-none core.$space-none core.$space-l;
-        padding: core.$space-none core.$space-none core.$space-l;
-
-        @media #{core.$screen-md-up} {
-            font-size: core.$font-size-m;
-        }
-
-        &__link {
-            font-family: core.$font-body;
-            font-style: normal;
-        }
+    .new-footer__navigation-level-1 {
+      border: none;
+      display: grid;
+      grid-template-columns: repeat(5, minmax(0, 1fr));
+      grid-gap: 1rem;
     }
+    .new-footer__navigation-level-1 .new-footer__navigation-item {
 
-    &__container {
-        @include grid.layout-containment;
-        @include grid.grid-col-padding;
-        padding-top: core.$space-xxl;
-        padding-bottom: core.$space-xxl;
     }
-
-    &__row {
-        display: grid;
-        grid: auto-flow / 1fr;
-        gap: 2rem 3rem;
-        justify-items: stretch;
-        justify-content: stretch;
-        align-items: start;
-        align-content: stretch;
-        
-        @media #{core.$screen-md-up} {
-            grid: auto-flow / 2fr 1fr;
-        }
-
-        @media #{core.$screen-lg-up} {
-            grid: auto-flow / 3fr 1fr;
-        }
+    .new-footer__navigation-level-1 .new-footer__navigation-link {
+      padding:0.5rem 0 0;
+      font-weight: 700;
     }
-
-    &__column {
-        justify-self: start;
-        align-self: start;
+    .new-footer__navigation-level-2 .new-footer__navigation-item {
+      background-color: transparent;
     }
-
-    &__aside {
-        display: inline-block;
-        margin: core.$space-none;
+    .new-footer__navigation-item {
+      border: none;
     }
-
-    &__sub-title {
-        color: $site-footer-link-color;
-        font-size: 1.125em;
+    .new-footer__navigation-level-2 .new-footer__navigation-link, .new-footer__navigation-level-2 .new-footer__navigation-link:hover {
+      color: #fff;
+      padding:0.5rem 0 0;
+      font-weight: normal;
     }
-
-    &__footer {
-        margin: core.$space-l core.$space-none core.$space-none core.$space-none;
-        overflow: hidden;
-
-        .uq-footer__row {
-            grid: auto-flow / 1fr;
-    
-            @media #{core.$screen-lg-up} {
-                grid: auto-flow / 3fr 1fr;
-            }
-        }
+    .new-footer__navigation-toggle::after {
+      background-image: none;
     }
+  }
+  /* Footer contact details */
+  .new-footer__contact {
+    font-size: 0.875rem;
+    padding: 2.5rem 2.5rem 0;
+    display: grid;
+    grid-template-columns: auto;
+    grid-gap: 1.5rem;
+  }
+  .new-footer__contact-item {
+  }
+  .new-footer__contact-item p:last-of-type {
+  margin-bottom: 0; /* allows grid gap to dictate spacing between last P tags (which currently have bottom instead of top margin.) */
+  }
+  @media(min-width: 73.25rem) {
+   .new-footer__contact {
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+    grid-gap: 1.5rem;
+    justify-content: space-between; 
+    padding: 2.5rem 0 0;
+   }
+  }
+  .new-footer__sub-title {
+    color: #d4c8de;
+    font-size: 1.125rem;
+    font-weight: 500;
+    margin: 0;
+  }
+  .new-footer__meta {
+    padding: 2.5rem 2.5rem 0;
+    font-size: 0.875rem;
+  }
+  .new-footer__meta-icons {
+    font-size: 1.5rem;
+    margin-top: 1rem;
+  }
+  .new-footer__footer {
+    padding:2.5rem;
+  }
+  .new-footer__footer-list {
+    display: flex;
+    flex-wrap: wrap;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    font-size: 0.875rem;
+  }
+  .new-footer__footer-list .new-footer__footer-item::after {
+    content: " | ";
+    padding: 0 0.5rem;
+    text-align: center;
+  }
+  .new-footer__footer-list .new-footer__footer-item:last-of-type::after {
+    content:none;
+    padding-right:0
+  }
+  .new-footer__footer-item {
+    margin-bottom: 0.5rem;
+  }
 
-    &__footer-menu {
-        &__list {
-            display: flex;
-            flex-wrap: wrap;
-            list-style-type: none;
-            margin: core.$space-none;
-            padding: core.$space-none;
-
-            li {
-                margin-bottom: core.$space-s;
-                
-                &::after {
-                    content: " | ";
-                    padding: core.$space-none core.$space-s;
-                    text-align: center;
-                }
-
-                &:last-of-type {
-                    &::after {
-                        content: none;
-                        padding-right: core.$space-none;
-                    }
-                }
-            }
-        }
+  @media(min-width: 73.25rem) {
+    .new-footer__container {
+      padding-left: 1rem;
+      padding-right: 1rem;
+      margin-left:auto;
+      margin-right:auto;
+      max-width:73.25rem;
     }
-    
-    &__social-media {
-        font-size: 1.5rem;
-
-        &__list {
-            list-style: none;
-            margin-top: 0;
-            margin-bottom: core.$space;
-            margin-left: -(core.$space-m);
-            margin-right: 0;
-            overflow: hidden;
-            padding: 0;
-
-            > li {
-                display: block;
-                float: left;
-                margin-left: core.$space-m;
-
-                > * {
-                    display: block;
-                }
-            }
-        }
-        &__item + .uq-footer__social-media__item::before {
-            content: " ";
-            display: inline-block;
-            margin: core.$space-none core.$space-s core.$space-none core.$space-none;
-        }
-        &__link {
-            &:hover {
-                color: $site-footer-color;
-                transition: all ease .5s;
-            }
-        }
+    .new-footer__reconciliation {
+    background:#000;
+    background-image: linear-gradient(90deg, rgba(0, 0, 0, 0.0) 400px, rgba(0, 0, 0, 1) 640px), url("../images/rap-artwork.png");
+    /*background-repeat: no-repeat;*/
     }
-
-    &--full-width {
-        padding: core.$space-none core.$space;
+    .new-footer__acknowledgement {
+      position: relative;
+      max-width:1140px;
+      margin: auto;
+      padding: 60px 60px 60px 426px;
+      color: #d4c8de;
+      font-family: "Merriweather",Georgia,serif;
+      font-style: italic;
+      font-weight: 400;
+      font-size: 1.25rem;
+      line-height: 1.5;
     }
-}
+    .new-footer__meta {
+      padding: 2.5rem 0 0;
+    }
+    .new-footer__footer {
+      padding: 2.5rem 0;
+    }
+  } 
