--- a/packages/new-footer/src/scss/_component.scss
+++ b/packages/new-footer/src/scss/_component.scss
@@ -2,137 +2,207 @@
 @use '@uqds/grid/src/scss/global' as grid;
 @use 'global' as *;
 
-.new-footer{
+.new-footer {
     background:linear-gradient(90deg, #51247A 0%, 87%, #962A8B 100%);
     box-sizing:border-box;
     color:#d4c8de;
+
+    &__reconciliation {
+      background:#000;
+      background-image: linear-gradient(90deg, rgba(0, 0, 0, .8), rgba(0, 0, 0, .8)), url("../images/rap-artwork.png");
+      /*background-repeat: no-repeat;*/
+    }
+
+    &__acknowledgement {
+      max-width:650px;
+      padding: 2.5rem;
+      color: #d4c8de;
+      font-family: "Merriweather",Georgia,serif;
+      font-style: italic;
+      font-weight: 400;
+      font-size: 1.25rem;
+      line-height: 1.5;
+    }
+
+    &__link {
+      font-family: "Roboto","Helvetica Neue",Helvetica,Arial,sans-serif;
+      font-style: normal;
+      font-weight: 500;
+      color:#fff;
+      
+      &:hover {
+        text-decoration:underline;
+        color:#fff;
+      }
+    }
+
+    &__navigation {
+      border-bottom: 1px solid #d4c8de;
+
+      @media #{core.$screen-lg-up} {
+        padding: 2.5rem 0;
+      }
+    }
+
+    &__navigation-list {
+      display: block;
+      list-style-type: none;
+      margin: 0;
+      padding: 0;
+    }
+
+    &__navigation-item {
+      border-top: 1px solid #d4c8de;
+      background-color: transparent;
+      display: block;
+      margin: 0;
+      padding: 0;
+      position: relative;  
+
+      @media #{core.$screen-lg-up} {
+        border: none;
+      }
+      
+    }
+
+    &__navigation-link {
+      display: block;
+      padding: 1rem 2.5rem;
+      color: #FFFFFF;
+
+      &:hover {
+        color: #ffffff;
+        text-decoration: underline;
+      }
+
+      @media #{core.$screen-lg-up} {
+        padding:0.5rem 0 0;
+        font-weight: 700;
+      }
+
+      
+    }
+
+    &__navigation-level-1 {
+      border: none;
+      display: grid;
+      grid-gap: 1rem;
+
+      // @media #{core.$screen-md-up} {
+      //   grid-template-columns: repeat(3, minmax(0, 1fr));
+      // }
+
+      @media #{core.$screen-lg-up} {
+        grid-template-columns: repeat(5, minmax(0, 1fr));
+      }
+
+    }
+
+    &__navigation-level-2 {
+      .new-footer__navigation-item {
+        background-color: #f7f6f5;
+
+        @media #{core.$screen-lg-up} {
+          background-color: transparent;
+          border: none;
+        }
+      }
+
+      .new-footer__navigation-link {
+        color: #2b2a29;
+        &:hover {
+          color: #2b2a29;
+        }
+
+        @media #{core.$screen-lg-up} {
+          color: #fff;
+          padding: 0.5rem 0 0;
+          font-weight: normal;
+        }
+      }
+      
+    }
+
+
+    &__navigation-toggle::after {
+      content: "";
+      background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23ffffff'%3e%3cpath d='m14.285 5.145-6 6.167a.41.41 0 0 1-.598 0L1.715 5.145' fill='none' stroke='%23ffffff' stroke-width='.75' stroke-linecap='round' stroke-linejoin='round'%3e%3c/path%3e%3c/svg%3e");
+      background-repeat: no-repeat;
+      width: 1rem;
+      height: 1rem;
+      transform: translateY(50%);
+      position: absolute;
+      top: 0.688rem;
+      right: 2.5rem;
+
+      @media #{core.$screen-lg-up} {
+        background-image: none;
+      }
+    }
+
+    &__navigation--is-open::after {
+      background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23ffffff'%3e%3cpath d='m1.715 10.855 6-6.168a.41.41 0 0 1 .597 0l5.973 6.168' fill='none' stroke='%23ffffff' stroke-width='.75' stroke-linecap='round' stroke-linejoin='round'%3e%3c/path%3e%3c/svg%3e");
+    }
+
   }  
   
-  .new-footer__reconciliation {
-    background:#000;
-    background-image: linear-gradient(90deg, rgba(0, 0, 0, .8), rgba(0, 0, 0, .8)), url("../images/rap-artwork.png");
-    /*background-repeat: no-repeat;*/
-  }
-  .new-footer__acknowledgement {
-    max-width:650px;
-    padding: 2.5rem;
-    color: #d4c8de;
-    font-family: "Merriweather",Georgia,serif;
-    font-style: italic;
-    font-weight: 400;
-    font-size: 1.25rem;
-    line-height: 1.5;
-  }
 
-  .new-footer__link {
-    font-family: "Roboto","Helvetica Neue",Helvetica,Arial,sans-serif;
-    font-style: normal;
-    font-weight: 500;
-    color:#fff;
-  }
-  .new-footer__link:hover {
-    text-decoration:underline;
-    color:#fff;
-  }
-  .new-footer__navigation {
-    border-bottom: 1px solid #d4c8de;
-  }
 
-  .new-footer__navigation-list {
-    display: block;
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-  }
+
+
+
   .new-footer__navigation-level-1 {
 
   }
   .new-footer__navigation-level-2 {
 
   }
-  .new-footer__navigation-item {
-    border-top: 1px solid #d4c8de;
-    background-color: transparent;
-    display: block;
-    margin: 0;
-    padding: 0;
-    position: relative;  
-  }
-  .new-footer__navigation-level-2 .new-footer__navigation-item {
-    background-color: #f7f6f5;
-  }
-  .new-footer__navigation-level-2 .new-footer__navigation-link {
-    color: #2b2a29;
-  }
-  .new-footer__navigation-level-2 .new-footer__navigation-link:hover {
-    color: #2b2a29;
-  }
-  .new-footer__navigation-link {
-    display: block;
-    padding: 1rem 2.5rem;
-    color: #FFFFFF;
-  }
-  .new-footer__navigation-link:hover {
-    color: #ffffff;
-    text-decoration: underline;
-  }
-  .new-footer__navigation-toggle::after {
-    content: "";
-    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23ffffff'%3e%3cpath d='m14.285 5.145-6 6.167a.41.41 0 0 1-.598 0L1.715 5.145' fill='none' stroke='%23ffffff' stroke-width='.75' stroke-linecap='round' stroke-linejoin='round'%3e%3c/path%3e%3c/svg%3e");
-    background-repeat: no-repeat;
-    width: 1rem;
-    height: 1rem;
-    transform: translateY(50%);
-    position: absolute;
-    top: 0.688rem;
-    right: 2.5rem;
-  }
-  .new-footer__navigation--is-open::after {
-    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23ffffff'%3e%3cpath d='m1.715 10.855 6-6.168a.41.41 0 0 1 .597 0l5.973 6.168' fill='none' stroke='%23ffffff' stroke-width='.75' stroke-linecap='round' stroke-linejoin='round'%3e%3c/path%3e%3c/svg%3e");
-  }
+
+
   @media(min-width: 64.25rem) {
-    .new-footer__navigation {
-      padding: 2.5rem 0;
-    }
-    .new-footer__navigation-level-1 {
-      border: none;
-      display: grid;
-      grid-template-columns: repeat(3, minmax(0, 1fr));
-      grid-gap: 1rem;
-    }
+    // .new-footer__navigation {
+    //   padding: 2.5rem 0;
+    // }
+    // .new-footer__navigation-level-1 {
+    //   border: none;
+    //   display: grid;
+    //   grid-template-columns: repeat(3, minmax(0, 1fr));
+    //   grid-gap: 1rem;
+    // }
   }
   @media(min-width: 73.25rem) {
-    .new-footer__navigation {
-      padding: 2.5rem 0;
-    }
-    .new-footer__navigation-level-1 {
-      border: none;
-      display: grid;
-      grid-template-columns: repeat(5, minmax(0, 1fr));
-      grid-gap: 1rem;
-    }
-    .new-footer__navigation-level-1 .new-footer__navigation-item {
+    // .new-footer__navigation {
+    //   padding: 2.5rem 0;
+    // }
+    // .new-footer__navigation-level-1 {
+    //   border: none;
+    //   display: grid;
+    //   grid-template-columns: repeat(5, minmax(0, 1fr));
+    //   grid-gap: 1rem;
+    // }
+    // .new-footer__navigation-level-1 .new-footer__navigation-item {
 
-    }
-    .new-footer__navigation-level-1 .new-footer__navigation-link {
-      padding:0.5rem 0 0;
-      font-weight: 700;
-    }
-    .new-footer__navigation-level-2 .new-footer__navigation-item {
-      background-color: transparent;
-    }
-    .new-footer__navigation-item {
-      border: none;
-    }
-    .new-footer__navigation-level-2 .new-footer__navigation-link, .new-footer__navigation-level-2 .new-footer__navigation-link:hover {
-      color: #fff;
-      padding:0.5rem 0 0;
-      font-weight: normal;
-    }
-    .new-footer__navigation-toggle::after {
-      background-image: none;
-    }
+    // }
+    // .new-footer__navigation-level-1 .new-footer__navigation-link {
+    //   padding:0.5rem 0 0;
+    //   font-weight: 700;
+    // }
+    // .new-footer__navigation-level-2 .new-footer__navigation-item {
+    //   background-color: transparent;
+    // }
+    // .new-footer__navigation-item {
+    //   border: none;
+    // }
+    // .new-footer__navigation-level-2 .new-footer__navigation-link, .new-footer__navigation-level-2 .new-footer__navigation-link:hover {
+    //   color: #fff;
+    //   padding:0.5rem 0 0;
+    //   font-weight: normal;
+    // }
+    // .new-footer__navigation-toggle::after {
+    //   background-image: none;
+    // }
   }
+
   /* Footer contact details */
   .new-footer__contact {
     font-size: 0.875rem;
