added initial header packages

--- a/packages/private-design-output/src/scss/main.scss
+++ b/packages/private-design-output/src/scss/main.scss
@@ -10,6 +10,7 @@
 @use 'button/src/scss/component' as button;
 @use 'card/src/scss/component' as card;
 @use 'new-footer/src/scss/component' as new-footer;
+@use 'new-header/src/scss/component' as new-header;
 @use 'form/src/scss/component' as form;
 @use 'grid-menu/src/scss/component' as grid-menu;
 @use 'header/src/scss/component' as header;
