--- a/packages/new-header/src/scss/_component.scss
+++ b/packages/new-header/src/scss/_component.scss
@@ -3,5 +3,50 @@
 @use 'global' as *;
 
 .new-header {
-  border: 1px solid red !important;
+  &__black {
+    background-color: #000;
+  }
+
+  &__black-nav {
+    @media #{core.$screen-lg-up} {
+      padding-left: 1rem;
+      padding-right: 1rem;
+      margin-left:auto;
+      margin-right:auto;
+      max-width:73.25rem;
+    }
+  }
+
+  &__black-nav-list {
+    text-align: right;
+    margin: 0;
+  }
+
+  &__black-nav-item {
+    display: inline; 
+  }
+
+  &__black-nav-link {
+    display: inline-block;
+    color: #fff;
+    padding: 0.5rem 1rem;
+  }
+
+
+  &__main {
+    background:linear-gradient(90deg, #51247A 0%, 87%, #962A8B 100%);
+    box-sizing:border-box;
+    padding: 1rem 0;
+
+    
+  }
+  &__main-container {
+    @media #{core.$screen-lg-up} {
+      padding-left: 1rem;
+      padding-right: 1rem;
+      margin-left:auto;
+      margin-right:auto;
+      max-width:73.25rem;
+    }
+  }
 } 
