--- a/packages/new-header/src/scss/_component.scss
+++ b/packages/new-header/src/scss/_component.scss
@@ -4,7 +4,7 @@
 
 .new-header {
   &__black {
-    background-color: #000;
+    background-color: #ccc;
   }
 
   &__black-nav {
@@ -18,29 +18,43 @@
   }
 
   &__black-nav-list {
-    text-align: right;
+    // text-align: right;
+    // margin: 0;
+    list-style-type: none;
     margin: 0;
+    padding-left: 0;
   }
 
   &__black-nav-item {
-    display: inline; 
+    // display: inline; 
+    margin: 0;
   }
 
   &__black-nav-link {
-    display: inline-block;
-    color: #fff;
-    padding: 0.5rem 1rem;
+    display: block;
+    color: core.$uq-purple;
+    padding: 1rem 1.5rem;
+    border-bottom: 1px solid #e2e2e2;
   }
 
 
   &__main {
     background:linear-gradient(90deg, #51247A 0%, 87%, #962A8B 100%);
     box-sizing:border-box;
-    padding: 1rem 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 
     
   }
   &__main-container {
+
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    
+
     @media #{core.$screen-lg-up} {
       padding-left: 1rem;
       padding-right: 1rem;
@@ -49,4 +63,93 @@
       max-width:73.25rem;
     }
   }
+
+  & .main-nav__toggle {
+    background: none;
+    border: none;
+  }
+
+  & .main-nav__menu-toggle {
+    padding: 2rem 1rem 2rem 1.5rem;
+  }
+
+  & .main-nav__search-toggle {
+    padding: 2rem 1.5rem;
+  }
+
+  &__logo {
+    width: 140px;
+
+    & a {
+      display: flex;
+    }
+  }
+
+  &__main-nav-conatainer {
+    // display: none;
+    background: #fff;
+    position: absolute;
+    width: 100%;
+    z-index: 3;
+  }
+
+  &__main-nav-list {
+    list-style-type: none;
+    margin: 0;
+    padding-left: 0;
+
+    & li {
+      margin: 0;
+    }
+  }
+
+  &__main-nav-link {
+    display: block;
+    border-bottom: 1px solid #e2e2e2;
+    color: core.$uq-purple;
+    text-decoration: none;
+    padding: 1rem 1.5rem;
+    transition: background-color .25s,border-color .25s;
+    font-weight: 500;
+    position: relative;
+
+    &::after {
+      content: "";
+      background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%2351247A'%3e%3cpath d='M6 13.4 4.6 12l4-4-4-4L6 2.6 11.4 8z'%3e%3c/path%3e%3c/svg%3e");
+      background-repeat: no-repeat;
+      width: 1rem;
+      height: 1rem;
+      transform: translateY(50%);
+      position: absolute;
+      top: 0.688rem;
+      right: 1.75rem;
+    }
+  }
+
+  .mega-menu {
+    display: none;
+    list-style-type: none;
+    margin: 0;
+    padding-left: 0;
+
+    & li {
+
+      & a {
+        padding-left: 3rem;
+      }
+    }
+
+    & ul {
+      list-style-type: none;
+      margin: 0;
+      padding-left: 0;
+
+      & li {
+        & a {
+          padding-left: 4.5rem;        }
+      }
+    }
+
+  }
+
 } 
