--- a/packages/new-header/src/scss/_component.scss
+++ b/packages/new-header/src/scss/_component.scss
@@ -3,103 +3,64 @@
 @use 'global' as *;
 
 .new-header {
-  &__black-nav-container {
-    background-color: #f5f5f5;
-    // grid-area: snav;
-  }
 
-  &__black-nav {
-    @media #{core.$screen-lg-up} {
-      padding-left: 1rem;
-      padding-right: 1rem;
-      margin-left:auto;
-      margin-right:auto;
-      max-width:73.25rem;
-    }
-  }
-
-  &__black-nav-list {
-    // text-align: right;
-    // margin: 0;
-    list-style-type: none;
-    margin: 0;
-    padding-left: 0;
-  }
-
-  &__black-nav-item {
-    // display: inline; 
-    margin: 0;
-  }
-
-  &__black-nav-link {
-    display: block;
-    color: core.$uq-purple;
-    padding: 1rem 1.5rem;
-    border-bottom: 1px solid #e2e2e2;
-  }
-
-
-  &__main {
-    background:linear-gradient(90deg, #51247A 0%, 87%, #962A8B 100%);
-    box-sizing:border-box;
-    // display: flex;
-    justify-content: space-between;
-    // align-items: center;
+  background: core.$uq-purple; //linear-gradient(90deg, #51247A 0%, 87%, #962A8B 100%);
+ 
+  &__wrapper {
     display: grid;
-    grid-template-columns: auto auto;
-
-    
-  }
-  &__main-container {
-    display: grid;
-    grid-template-columns: auto auto;
-    // display: flex;
-    justify-content: space-between;
     align-items: center;
-    // grid-area: main;
-    
+    grid-template-columns: 1fr 9fr 1fr;
+    grid-template-areas:
+      "menutoggle logo searchtoggle"
+      "mainnav mainnav mainnav"
+      "secondarynav secondarynav secondarynav"
+  }
 
-    @media #{core.$screen-lg-up} {
-      padding-left: 1rem;
-      padding-right: 1rem;
-      margin-left:auto;
-      margin-right:auto;
-      max-width:73.25rem;
-    }
+  &__menu-toggle  {
+    grid-area: menutoggle;
+  }
+
+  &__search-toggle {
+    grid-area: searchtoggle;
   }
 
   & .main-nav__toggle {
     background: none;
     border: none;
+    padding: 2rem 1.5rem;
   }
 
   & .main-nav__menu-toggle {
-    padding: 2rem 1rem 2rem 1.5rem;
+    // padding: 2rem 1rem 2rem 1.5rem;
   }
 
   & .main-nav__search-toggle {
-    padding: 2rem 1.5rem;
+    // padding: 2rem 1.5rem;
     // grid-area: search;
   }
 
   &__logo {
+    grid-area: logo;
     width: 140px;
 
     & a {
-      display: flex;
+      display: grid;
     }
   }
 
-  &__main-nav-conatainer {
+  // __main-nav
+
+  &__main-nav-wrapper {
+    grid-area: mainnav;
     // display: none;
-    background: #fff;
-    position: absolute;
+    // background: #fff;
+    // position: absolute;
     width: 100%;
     z-index: 3;
   }
 
   &__main-nav {
-    // grid-area: mainnav;
+
   }
 
   &__main-nav-list {
@@ -114,8 +75,8 @@
 
   &__main-nav-link {
     display: block;
-    border-bottom: 1px solid #e2e2e2;
-    color: core.$uq-purple;
+    //border-bottom: 1px solid #e2e2e2;
+    color: #fff; //core.$uq-purple;
     text-decoration: none;
     padding: 1rem 1.5rem;
     transition: background-color .25s,border-color .25s;
@@ -124,7 +85,7 @@
 
     &::after {
       content: "";
-      background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%2351247A'%3e%3cpath d='M6 13.4 4.6 12l4-4-4-4L6 2.6 11.4 8z'%3e%3c/path%3e%3c/svg%3e");
+      background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23FFF'%3e%3cpath d='M6 13.4 4.6 12l4-4-4-4L6 2.6 11.4 8z'%3e%3c/path%3e%3c/svg%3e");
       background-repeat: no-repeat;
       width: 1rem;
       height: 1rem;
@@ -137,6 +98,7 @@
 
   .mega-menu {
     display: none;
+    background-color: #fff;
     list-style-type: none;
     margin: 0;
     padding-left: 0;
@@ -145,6 +107,7 @@
 
       & a {
         padding-left: 3rem;
+        color: core.$uq-purple;
       }
     }
 
@@ -160,6 +123,40 @@
       }
     }
 
+  }
+
+  &__black-nav-wrapper {
+    background-color: #48206c;
+    grid-area: secondarynav;
+  }
+
+  &__black-nav {
+    // @media #{core.$screen-lg-up} {
+    //   padding-left: 1rem;
+    //   padding-right: 1rem;
+    //   margin-left:auto;
+    //   margin-right:auto;
+    //   max-width:73.25rem;
+    // }
+  }
+
+  &__black-nav-list {
+    // text-align: right;
+    // margin: 0;
+    list-style-type: none;
+    margin: 0;
+    padding-left: 0;
+  }
+
+  &__black-nav-item {
+
+    margin: 0;
+  }
+
+  &__black-nav-link {
+    display: block;
+    color: #fff; //core.$uq-purple;
+    padding: 1rem 1.5rem;
   }
 
 } 
