--- a/packages/new-header/src/scss/_component.scss
+++ b/packages/new-header/src/scss/_component.scss
@@ -26,7 +26,8 @@
     grid-area: mainheader;
     grid-template-areas:
     "menutoggle logo searchtoggle"
-    "mainnav mainnav mainnav";
+    "mainnav mainnav mainnav"
+    "search search search";
     
 
     @media #{core.$screen-lg-up} {
@@ -36,7 +37,8 @@
       margin-right:auto;
       max-width:73.25rem;
       grid-template-areas:
-        "logo mainnav searchtoggle";
+        "logo mainnav searchtoggle"
+        "search search search";
     }
   }
 
@@ -117,7 +119,10 @@
   }
 
   &__main-nav {
-
+    
+    @media #{core.$screen-lg-up} {
+      padding: 0 2rem;
+    }
   }
 
   &__main-nav-list {
@@ -149,6 +154,10 @@
     font-weight: 500;
     position: relative;
 
+    @media #{core.$screen-lg-up} {
+      padding: 1rem 2.5rem 1rem 1.5rem;
+    }
+
     &::after {
       content: "";
       background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23FFF'%3e%3cpath d='M6 13.4 4.6 12l4-4-4-4L6 2.6 11.4 8z'%3e%3c/path%3e%3c/svg%3e");
@@ -159,6 +168,10 @@
       position: absolute;
       top: 0.688rem;
       right: 1.75rem;
+
+      @media #{core.$screen-lg-up} {
+        right: 1.25rem;
+      }
     }
   }
 
@@ -249,6 +262,99 @@
     &:hover {
       //font-weight: 500;
       color: #fff;
+    }
+  }
+
+  &__search {
+    grid-area: search;
+    padding: 0 1.5rem;
+
+    @media #{core.$screen-lg-up} {
+      padding: 1rem 0;
+    }
+  }
+
+  &__search-query {
+    position: relative;
+    display: inline-block;
+    max-width: 100%;
+    min-width: 100%;
+    border-radius: 2px;
+    background-color: #fff;
+    background-position: 1rem;
+    margin-bottom: 1rem;
+  }
+
+  &__search-query-input {
+    margin: 0 !important;
+  }
+
+  &__search-query-button {
+
+    background-clip: padding-box;
+    background-color: #fff;
+    border-radius: 5px;
+    border: 2px solid transparent;
+    color: #51247a;
+    display: inline-block;
+    font-size: 1rem;
+    height: 2.75rem;
+    line-height: 1.5;
+    margin-bottom: 0;
+    margin-right: 0;
+    overflow: hidden;
+    position: absolute;
+    right: 0;
+    text-decoration: none;
+    text-indent: 0;
+    top: calc(50% - 1.375rem);
+    transition: color .2s,background-color .2s,border-color .2s;
+    width: 2.75rem;
+
+    &::before {
+      content: "";
+      position: absolute;
+      display: block;
+      width: 1.5rem;
+      height: 1.5rem;
+      top: 0.5rem;
+      left: 0.5rem;
+      background-size: 100%;
+      background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%2351247A'%3e%3cg fill='none' stroke='%2351247A' stroke-width='.75'%3e%3cpath d='M6.57 11.145a4.573 4.573 0 1 0 .003-9.146 4.573 4.573 0 0 0-.003 9.146zm0 0'%3e%3c/path%3e%3cpath d='m9.715 10 4.57 4.285' stroke-linecap='round' stroke-linejoin='round'%3e%3c/path%3e%3c/g%3e%3c/svg%3e");
+    }
+  }
+
+  &__search-query-submit {
+    color: transparent;
+    position: relative;
+    display: block;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    border: 0;
+    background-color: transparent;
+    z-index: 3;
+    cursor: pointer;
+    outline-offset: -2px;
+    font-size: 1rem;
+  }
+
+  &__search-range{
+
+    display: inline-block;
+
+   // padding-top: 1rem;
+
+    & label {
+      color: #fff;
+    }
+  }
+
+
+  &__main-nav-wrapper,
+  &__black-nav-wrapper {
+    @media #{core.$screen-lg-down} {
+      display: none;
     }
   }
 
