--- a/packages/new-header/src/scss/_component.scss
+++ b/packages/new-header/src/scss/_component.scss
@@ -31,8 +31,7 @@
     
 
     @media #{core.$screen-lg-up} {
-      padding-left: 1rem;
-      padding-right: 1rem;
+      padding: 1rem;
       margin-left:auto;
       margin-right:auto;
       max-width:73.25rem;
@@ -60,7 +59,7 @@
     padding: 2rem 1.5rem;
 
     @media #{core.$screen-lg-up} {
-      padding: 2rem 1rem;
+      padding: 1rem;
     }
   }
 
@@ -348,6 +347,10 @@
     & label {
       color: #fff;
     }
+  }
+
+  &__search {
+    display: none;
   }
 
 
