--- a/packages/new-header/src/scss/_component.scss
+++ b/packages/new-header/src/scss/_component.scss
@@ -155,6 +155,10 @@
           height: auto;
           visibility: visible;
         }
+
+        & .new-header__main-nav-link {
+          border-bottom: 2px solid white;
+        }
       }
     }
   }
@@ -167,24 +171,31 @@
     transition: background-color .25s,border-color .25s;
     font-weight: 500;
     position: relative;
+    border-bottom: 2px solid core.$uq-purple;
+
+    &:hover {
+      color: #fff;
+      text-decoration: none;
+    }
 
     @media #{core.$screen-lg-up} {
-      padding: 2rem 2.5rem 2rem 1.5rem;
+      padding: 2rem 2.75rem 2rem 1.5rem;
     }
 
     &::after {
       content: "";
-      background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23FFF'%3e%3cpath d='M6 13.4 4.6 12l4-4-4-4L6 2.6 11.4 8z'%3e%3c/path%3e%3c/svg%3e");
+      background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' stroke='%23FFFFFF'%3E%3Cpath d='M14.285 5.145l-6 6.167a.41.41 0 01-.598 0L1.715 5.145' fill='none' stroke-width='1.2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E");
+      background-size: 0.6rem;
       background-repeat: no-repeat;
       width: 1rem;
       height: 1rem;
       transform: translateY(50%);
       position: absolute;
-      top: 1.688rem;
+      top: 1.9rem;
       right: 1.75rem;
 
       @media #{core.$screen-lg-up} {
-        right: 1.25rem;
+        right: 1rem;
       }
     }
   }
@@ -387,7 +398,7 @@
   &__main-nav-wrapper,
   &__black-nav-wrapper {
     @media #{core.$screen-lg-down} {
-      //display: none;
+      display: none;
     }
   }
 
@@ -397,17 +408,14 @@
 
   &__megamenu-wrapper {
     position: absolute;
-    top: 8.25rem;
+    top: 8.4rem;
     left: 0;
     background: #f5f5f5;
     width: 100%;
     z-index: 40;
     height: 0;
     visibility: hidden;
-
-    // @media #{core.$screen-lg-up} {
-    //   display: block;
-    // }
+    box-shadow: 0 0.75rem 1.5rem rgb(24 24 24 / 20%);
     
   }
 
@@ -418,26 +426,6 @@
     max-width:73.25rem;
     padding: 1rem 1rem 2rem 1rem;
   }
-
-  // &__megamenu {
-    
-  //   transition: opacity .2s ease, transform .2s ease, visibility .2s ease;
-  //   transform: translateY(-0.5rem);
-  //   visibility: hidden;
-  //   opacity: 0;
-  //   height: 0;
-  //   margin-left:auto;
-  //   margin-right:auto;
-  //   max-width:73.25rem;
-
-  //   &--open {
-  //     padding: 1rem 1rem 2rem 1rem;
-  //     transform: translateY(0);
-  //     visibility: visible;
-  //     opacity: 1;
-  //     height: auto;
-  //   }
-  // }
 
   .megamenu__row {
     display: grid;
@@ -466,7 +454,7 @@
         margin: 0;
 
         & a {
-          display: block;
+          display: inline-block;
           padding: .25rem 0;
           color: core.$uq-purple;
         }
